# chess_ai

./: .coverage  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: README.md  Week1_report.md  Week2_report.md  Week4_report.md  Week5_report.md  Week6_report.md  implementation.md  specification.md  testing.md
src/: chessengine.py
src/tests/: test_chessengine.py
tiraconfig/: runcommand
