[tool.poetry]
name = "chess-ai"
version = "0.1.0"
description = ""
authors = ["August Rouvari <august.rouvari@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.6"
coverage = "^7.7.1"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
