[tool.poetry]
name = "chess_ai"
version = "0.1.0"
description = ""
authors = ["August Rouvari <august.rouvari@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.6"
coverage = "^7.7.1"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
